deploy/verified_manifests/vllm-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vllm-llama3-8b-instruct
  name: vllm-llama3-8b-instruct
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vllm-llama3-8b-instruct
    spec:
      containers:
      - command:
        - vllm
        - serve
        - Qwen/Qwen2.5-0.5B-Instruct
        - --dtype
        - half
        - --max-model-len
        - "1024"
        env:
        - name: HUGGING_FACE_HUB_TOKEN
          valueFrom:
            secretKeyRef:
              key: token
              name: hf-token-secret
              optional: true
        image: vllm/vllm-openai:v0.6.3.post1
        imagePullPolicy: IfNotPresent
        name: vllm
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
