deploy/verified_manifests/vllm-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vllm-llama3-8b-instruct
  name: vllm-llama3-8b-instruct
  namespace: default
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm-llama3-8b-instruct
  type: ClusterIP
